# Gm3d

./: .clang-format  .travis.yml  CMakeLists.txt  LICENSE  README.md
src/cppid/gm3d/: Mat3.hpp  Mat4.hpp  Rgba.hpp  Vec.hpp  Vec2.hpp  Vec3.hpp  all.hpp  basic_vector_nd.hpp  mat3.hpp  mat4.hpp  point_2d.hpp  point_3d.hpp  rgba.hpp  vec.hpp  vec2.hpp  vec3.hpp  vector_2d.hpp  vector_3d.hpp
src/cppid/gm3d/detail/: BasicRgba.hpp  basic_point_nd.hpp  basic_point_vector.hpp  basic_rgba.hpp  basic_vector_nd.hpp  type_traits.hpp
src/gm3d/: Mat3.hpp  Mat4.hpp  Rgba.hpp  Vec.hpp  Vec2.hpp  Vec3.hpp  all.hpp
src/gm3d/detail/: BasicRgba.hpp  type_traits.hpp
test/: matrix3.cpp  matrix4.cpp  point2.cpp  point3.cpp  rgba_float.cpp  rgba_uint8.cpp  vector2.cpp  vector3.cpp
